# backend

./: .env  Cargo.toml  Dockerfile  README.md  SplitBuddyDB  SplitBuddyDB-shm  SplitBuddyDB-wal  test.json  users.db
.github/workflows/: rust.yml
k8s/: kustomization.yaml  routes.yaml  tripsplit.yaml
migrations/: 0001_create_users.sql  0002_create_groups.sql
mocked_front/: package-lock.json  package.json
mocked_front/src/routes/: +page.svelte
src/: lib.rs  main.rs  server.rs
src/auth/: login.rs  mod.rs  register.rs  utils.rs
src/db/: database.sql  expense.rs  group.rs  mod.rs  transaction.rs  user.rs
src/expense/: add_expense.rs  get_all_user_expenses.rs  get_expenses_by_group.rs  mod.rs
src/group/: add_expense.rs  add_to_group.rs  calculate_expense.rs  create_group.rs  get_groups.rs  get_joined_groups.rs  get_owned_groups.rs  join_group.rs  mod.rs
src/models/: expenses.rs  group.rs  mod.rs  user.rs
src/summary/: get_summary.rs  mod.rs
src/user/: add_user.rs  get_user.rs  mod.rs
tests/: group_integration.rs  sdk.rs  server_integration.rs
