[package]
name = "trip_split"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.210", features = ["derive"] }
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
axum = { version = "0.7.5", features = ["http2", "macros", "multipart", "ws"] }
serde_json = "1.0"
tower-http={version = "0.6.2", features = ["cors"]}
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio", "macros"] }
dotenvy = "0.15"
utoipa = "5.3.1"
utoipa-swagger-ui = "9.0.0"