[package]
name = "trip_split"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0"
tower-http={version = "0.6.2", features = ["cors"]}
axum = { version = "0.8.0", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
utoipa = { version = "5.3.1", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
utoipa-axum = { version = "0.2.0" }
