[package]
name = "trip_split"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0"
tower-http={version = "0.6.2", features = ["cors"]}
axum = { version = "0.8.0", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
utoipa = { version = "5.3.1", features = ["axum_extras","chrono"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
utoipa-axum = { version = "0.2.0" }
chrono = { version = "0.4.41", features = ["serde"] }
sha2 = "0.10"
base64 = "0.21"
sqlx = { version = "0.8.2", features = [ "chrono", "macros", "regexp", "runtime-async-std", "runtime-tokio", "sqlite", "uuid" ] }

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
portpicker = "0.1"